--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "typescript": "^4.8.4",
     "url": "^0.11.0"
   },
+  "scripts":{
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.ts"
+  },
+
   "devDependencies": {
     "@types/node": "^18.7.18"
   }
